--- a/.env.development
+++ b/.env.development
@@ -1,5 +1,5 @@
-POSTGRES_HOST=local_host
+POSTGRES_HOST=localhost
 POSTGRES_PORT=5432
 POSTGRES_USER=local_user
-POSTGRES_DB=local_DB
+POSTGRES_DB=local_db
 POSTGRES_PASSWORD=local_password
