--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "dependencies": {
     "dotenv": "^16.4.4",
     "next": "^13.1.6",
+    "node": "^24.12.0",
     "node-fetch": "^3.3.2",
     "node-pg-migrate": "^6.2.2",
     "pg": "^8.11.3",
